Fixed footer suds image from covering copyright text on wide screens

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,20 +1,20 @@
 footer {
   position: relative;
   @extend .flex;
+  justify-content: flex-end;
   flex-direction: column;
-  height: 335px;
+  height: 25vw;
   background: $primary-color;
   background-image: url(../img/suds.png);
   background-size: contain;
   background-repeat: repeat-x;
   background-position: top;
-  padding-bottom: 3vh;
 }
 
 .copyright {
   color: #fff;
   line-height: 1.7;
-  margin-top: 10rem;
+  margin-bottom: 3vw;
   font-size: 1rem;
   text-align: center;
 }
